--- a/Farmacia/index.html
+++ b/Farmacia/index.html
@@ -12,7 +12,7 @@
     <!--COMENZAMOS CON EL NAVBAR-->
     <header class="header">
         <div class="logo">
-            <img src="imagenes/logo.png" alt="logo">
+            <img src="imagenes/Sin-título-1.png" alt="logo">
         </div>
         <div class="barra">
             <form action="#">
@@ -22,9 +22,9 @@
         </div>
         <nav>
             <ul class="nav-list">
-                <li><a href="#">Mi Cuenta</a></li>
-                <li><a href="#">Carrito</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="Mi cuenta.html"><img src="imagenes/iconos/mi cuenta.png" alt="mi cuenta"></a></li>
+                <li><a href="Carrito.html"><img src="imagenes/iconos/carrito-de-compras.png" alt="Carrito"></a></li>
+                <li><a href="Contacto.html"><img src="imagenes/iconos/contactanos.png" alt="contactanos"></a></li>
             </ul>
         </nav>    
     </header>
