--- a/Farmacia/index.html
+++ b/Farmacia/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/styles.css">
     <script src="https://kit.fontawesome.com/7e6d68e125.js" crossorigin="anonymous"></script>
+
     <title>Farmacia Lg</title>
 </head>
+
 <body>
     <!--COMENZAMOS CON EL NAVBAR-->
     <header class="header">
         <div class="logo">
-            <img src="imagenes/logo.png" alt="logo">
+            <img src="imagenes/Sin-título-1.png" alt="logo">
         </div>
         <div class="barra">
             <form action="#">
@@ -22,25 +24,40 @@
         </div>
         <nav>
             <ul class="nav-list">
-                <li><a href="#">Mi Cuenta</a></li>
-                <li><a href="#">Carrito</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="Mi cuenta.html"><i class="fas fa-user"></i></a></li>
+                <li><a href="Carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="Contacto.html"><i class="fas fa-phone"></i></a></li>
             </ul>
         </nav>    
     </header>
 
     <!--COMIENZA CONTENIDO PRINCIPAL-->
     <main>
-    <div class="slider">
-        <ul>
-            <li><img src="imagenes/slider/1.jpg" alt=""></li>
-            <li><img src="imagenes/slider/2.jpg" alt=""></li>
-            <li><img src="imagenes/slider/3.jpg" alt=""></li>
-            <li><img src="imagenes/slider/4.jpg" alt=""></li>
-        </ul>
-        
-    </div>
+        <div class="slider">
+            <ul>
+                <li><img src="imagenes/slider/1.jpg" alt=""></li>
+                <li><img src="imagenes/slider/2.jpg" alt=""></li>
+                <li><img src="imagenes/slider/3.jpg" alt=""></li>
+                <li><img src="imagenes/slider/4.jpg" alt=""></li>
+            </ul>
+        </div>
+
+        <!--MOSCA CON ESTO ES LA VAINA DE LAS CATEGORIAS-->
+        <div class="categorias">    
+            <div class="titulo-categorias">
+                <h2> Categorias</h2>
+            </div>
+
+            <div class="vitaminas">
+                <div class="img-vitaminas">
+                    <img src="#" alt="vitaminas">
+                </div>
+                <p class="descripcion-vitaminas">Vitaminas</p>
+            </div>
+        </div>
+
     </main>
+
 
     <!--COMIENZA EL FOOTER-->
     <footer>
