--- a/Farmacia/index.html
+++ b/Farmacia/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/styles.css">
     <script src="https://kit.fontawesome.com/7e6d68e125.js" crossorigin="anonymous"></script>
+
     <title>Farmacia Lg</title>
 </head>
+
 <body>
     <!--COMENZAMOS CON EL NAVBAR-->
     <header class="header">
@@ -22,25 +24,34 @@
         </div>
         <nav>
             <ul class="nav-list">
-                <li><a href="Mi cuenta.html"><img src="imagenes/iconos/mi cuenta.png" alt="mi cuenta"></a></li>
-                <li><a href="Carrito.html"><img src="imagenes/iconos/carrito-de-compras.png" alt="Carrito"></a></li>
-                <li><a href="Contacto.html"><img src="imagenes/iconos/contactanos.png" alt="contactanos"></a></li>
+                <li><a href="Mi cuenta.html"><i class="fas fa-user"></i></a></li>
+                <li><a href="Carrito.html"><i class="fas fa-shopping-cart"></i></a></li>
+                <li><a href="Contacto.html"><i class="fas fa-phone"></i></a></li>
             </ul>
         </nav>    
     </header>
 
     <!--COMIENZA CONTENIDO PRINCIPAL-->
     <main>
-    <div class="slider">
-        <ul>
-            <li><img src="imagenes/slider/1.jpg" alt=""></li>
-            <li><img src="imagenes/slider/2.jpg" alt=""></li>
-            <li><img src="imagenes/slider/3.jpg" alt=""></li>
-            <li><img src="imagenes/slider/4.jpg" alt=""></li>
-        </ul>
+        <div class="slider">
+            <ul>
+                <li><img src="imagenes/slider/1.jpg" alt=""></li>
+                <li><img src="imagenes/slider/2.jpg" alt=""></li>
+                <li><img src="imagenes/slider/3.jpg" alt=""></li>
+                <li><img src="imagenes/slider/4.jpg" alt=""></li>
+            </ul>
+        </div>
+
         
-    </div>
+        <ul class="menu">
+            <li><a href="salud y medicamentos.html">Salud y medicamentos</a></li>
+            <li><a href="Bebe.html">Bebe</a></li>
+            <li><a href="belleza y cuidado personal.html">Belleza y Cuidado personal</a></li>
+            <li><a href="alimentos y bebidas.html">Alimentos y Bebidas</a></li>
+        </ul>
+
     </main>
+
 
     <!--COMIENZA EL FOOTER-->
     <footer>
